--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -232,6 +232,7 @@ leo_icons = [
   "forward-15.svg",
   "fullscreen-on.svg",
   "google-color.svg",
+  "funnel.svg",
   "graph.svg",
   "grid04.svg",
   "hamburger-menu.svg",
