WIP: Updated package to latest version
WIP - Download/stream server

Install

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,7 +74,8 @@
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": []
 }
