--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -171,7 +171,6 @@ source_set("ui") {
       "omnibox/brave_omnibox_client_impl.cc",
       "omnibox/brave_omnibox_client_impl.h",
       "page_action/brave_page_action_icon_type.h",
-      "session_crashed_bubble_brave.cc",
       "side_panel/ai_chat/ai_chat_side_panel_utils.cc",
       "side_panel/ai_chat/ai_chat_side_panel_utils.h",
       "sidebar/sidebar.h",
@@ -439,8 +438,6 @@ source_set("ui") {
       "views/bookmarks/brave_bookmark_context_menu.h",
       "views/bookmarks/saved_tab_groups/brave_saved_tab_group_button.cc",
       "views/bookmarks/saved_tab_groups/brave_saved_tab_group_button.h",
-      "views/brave_first_run_dialog.cc",
-      "views/brave_first_run_dialog.h",
       "views/brave_javascript_tab_modal_dialog_view_views.cc",
       "views/brave_javascript_tab_modal_dialog_view_views.h",
       "views/brave_layout_provider.cc",
@@ -570,6 +567,7 @@ source_set("ui") {
     ]
 
     deps += [
+      "//brave/browser/metrics",
       "//chrome/browser/devtools",
       "//components/bookmarks/browser",
     ]
