--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -217,6 +217,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/externalnav/BraveExternalNavigationHandler.java",
   "../../brave/android/java/org/chromium/chrome/browser/feedback/BraveHelpAndFeedbackLauncherImpl.java",
   "../../brave/android/java/org/chromium/chrome/browser/firstrun/BraveFirstRunFlowSequencer.java",
+  "../../brave/android/java/org/chromium/chrome/browser/firstrun/BraveFirstRunUtils.java",
   "../../brave/android/java/org/chromium/chrome/browser/firstrun/BraveFreIntentCreator.java",
   "../../brave/android/java/org/chromium/chrome/browser/firstrun/WelcomeOnboardingActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/homepage/BraveHomepageManager.java",
