--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -98,10 +98,6 @@ brave_chrome_browser_sources = [
   "//brave/browser/browser_context_keyed_service_factories.h",
   "//brave/browser/geolocation/brave_geolocation_permission_context_delegate.cc",
   "//brave/browser/geolocation/brave_geolocation_permission_context_delegate.h",
-  "//brave/browser/metrics/brave_metrics_service_accessor.cc",
-  "//brave/browser/metrics/brave_metrics_service_accessor.h",
-  "//brave/browser/metrics/metrics_reporting_util.cc",
-  "//brave/browser/metrics/metrics_reporting_util.h",
   "//brave/browser/policy/brave_simple_policy_map.h",
   "//brave/browser/prefs/brave_pref_service_incognito_allowlist.cc",
   "//brave/browser/prefs/brave_pref_service_incognito_allowlist.h",
@@ -125,7 +121,8 @@ brave_chrome_browser_deps = [
   "//brave/browser/brave_wallet:tab_helper",
   "//brave/browser/component_updater",
   "//brave/browser/ethereum_remote_client/buildflags",
-  "//brave/browser/metrics/buildflags",
+  "//brave/browser/first_run",
+  "//brave/browser/metrics",
   "//brave/browser/profiles",
   "//brave/browser/search",
   "//brave/browser/sync",
@@ -355,6 +352,7 @@ if (is_android) {
     "//brave/browser/android:android_browser_process",
     "//brave/browser/android/preferences",
     "//brave/browser/android/safe_browsing:buildflags",
+    "//brave/browser/first_run/android",
     "//brave/build/android:jni_headers",
     "//brave/components/brave_sync:sync_service_impl_helper",
     "//chrome/android:jni_headers",
