--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -5,7 +5,6 @@
 
 import("//brave/android/android_browser_tests.gni")
 import("//brave/browser/ethereum_remote_client/buildflags/buildflags.gni")
-import("//brave/browser/metrics/buildflags/buildflags.gni")
 import("//brave/build/config.gni")
 import("//brave/components/ai_chat/core/common/buildflags/buildflags.gni")
 import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
@@ -165,8 +164,8 @@ test("brave_unit_tests") {
     "//brave/browser/decentralized_dns/test:unit_tests",
     "//brave/browser/ephemeral_storage:unit_tests",
     "//brave/browser/ethereum_remote_client/buildflags",
-    "//brave/browser/first_run:unit_tests",
-    "//brave/browser/metrics:brave_metrics_unit_tests",
+    "//brave/browser/first_run/test:unit_tests",
+    "//brave/browser/metrics/test:unit_tests",
     "//brave/browser/misc_metrics:unit_tests",
     "//brave/browser/net:unit_tests",
     "//brave/browser/new_tab:unittest",
@@ -847,7 +846,7 @@ test("brave_browser_tests") {
     "//brave/browser/extensions",
     "//brave/browser/extensions:test_support",
     "//brave/browser/farbling:browser_tests",
-    "//brave/browser/metrics/buildflags",
+    "//brave/browser/metrics",
     "//brave/browser/misc_metrics:browser_tests",
     "//brave/browser/net:browser_tests",
     "//brave/browser/permissions:browser_tests",
@@ -1021,10 +1020,6 @@ test("brave_browser_tests") {
     deps += [ "//brave/components/brave_mobile_subscription/renderer/android:browser_tests" ]
   }
 
-  if (enable_crash_dialog) {
-    sources += [ "//brave/browser/ui/views/crash_report_permission_ask_dialog_browsertest.cc" ]
-  }
-
   if (enable_greaselion) {
     sources += [ "//brave/browser/greaselion/greaselion_browsertest.cc" ]
 
@@ -1095,6 +1090,7 @@ test("brave_browser_tests") {
       "//brave/browser/ui/views/bookmarks/bookmark_bar_browsertest.cc",
       "//brave/browser/ui/views/brave_actions/brave_actions_container_browsertest.cc",
       "//brave/browser/ui/views/brave_shields/cookie_list_opt_in_browsertest.cc",
+      "//brave/browser/ui/views/crash_report_permission_ask_dialog_browsertest.cc",
       "//brave/browser/ui/views/frame/brave_non_client_hit_test_helper_browsertest.cc",
       "//brave/browser/ui/views/frame/brave_tabs_search_button_browsertest.cc",
       "//brave/browser/ui/views/frame/split_view_browsertest.cc",
