Add credential manager for Web Discovery

--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -201,6 +201,7 @@ brave_chrome_browser_deps = [
   "//brave/components/speedreader/common/buildflags",
   "//brave/components/tor/buildflags",
   "//brave/components/version_info",
+  "//brave/components/web_discovery/browser",
   "//brave/components/webcompat/content/browser",
   "//brave/components/webcompat/core/common",
   "//brave/services/network/public/cpp",
