Update leo CSS variables import

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -223,6 +223,7 @@ leo_icons = [
   "file-corrupted.svg",
   "file-edit.svg",
   "file.svg",
+  "filter.svg",
   "filter-settings.svg",
   "flash.svg",
   "flashdrive.svg",
@@ -232,7 +233,6 @@ leo_icons = [
   "forward-15.svg",
   "fullscreen-on.svg",
   "google-color.svg",
-  "funnel.svg",
   "graph.svg",
   "grid04.svg",
   "hamburger-menu.svg",
