--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -44,6 +44,12 @@ source_set("ui") {
     "webui/brave_adblock_internals_ui.h",
     "webui/brave_adblock_ui.cc",
     "webui/brave_adblock_ui.h",
+    "webui/brave_rewards/rewards_page_data_source.cc",
+    "webui/brave_rewards/rewards_page_data_source.h",
+    "webui/brave_rewards/rewards_page_handler.cc",
+    "webui/brave_rewards/rewards_page_handler.h",
+    "webui/brave_rewards/rewards_page_ui.cc",
+    "webui/brave_rewards/rewards_page_ui.h",
     "webui/brave_rewards_internals_ui.cc",
     "webui/brave_rewards_internals_ui.h",
     "webui/brave_rewards_page_ui.cc",
@@ -222,6 +228,8 @@ source_set("ui") {
       "toolbar/brave_bookmark_sub_menu_model.cc",
       "toolbar/brave_bookmark_sub_menu_model.h",
       "toolbar/brave_recent_tabs_sub_menu_model.h",
+      "webui/brave_rewards/rewards_page_top_ui.cc",
+      "webui/brave_rewards/rewards_page_top_ui.h",
       "webui/brave_rewards/rewards_panel_handler.cc",
       "webui/brave_rewards/rewards_panel_handler.h",
       "webui/brave_rewards/rewards_panel_ui.cc",
@@ -720,12 +728,14 @@ source_set("ui") {
     "//brave/components/brave_perf_predictor/common",
     "//brave/components/brave_rewards/browser",
     "//brave/components/brave_rewards/common",
+    "//brave/components/brave_rewards/common:features",
     "//brave/components/brave_rewards/common/mojom",
     "//brave/components/brave_rewards/common/mojom:webui",
     "//brave/components/brave_rewards/core:headers",
     "//brave/components/brave_rewards/resources",
     "//brave/components/brave_rewards/resources:internals_generated_resources",
     "//brave/components/brave_rewards/resources:page_generated_resources",
+    "//brave/components/brave_rewards/resources/rewards_page:rewards_page_generated",
     "//brave/components/brave_search/common",
     "//brave/components/brave_search_conversion",
     "//brave/components/brave_shields/content/browser",
