Remove tsconfig changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,8 +74,7 @@
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "allowSyntheticDefaultImports": true
+    "noUnusedLocals": true
   },
   "include": []
 }
