--- a/browser/farbling/BUILD.gn
+++ b/browser/farbling/BUILD.gn
@@ -35,6 +35,7 @@ if (!is_android) {
       "//brave/components/brave_shields/content/browser",
       "//brave/components/brave_shields/core/common",
       "//brave/components/constants",
+      "//brave/components/webcompat/core/common",
       "//brave/third_party/blink/renderer",
       "//chrome/browser",
       "//chrome/browser/ui",
