--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -200,7 +200,8 @@ brave_chrome_browser_deps = [
   "//brave/components/speedreader/common/buildflags",
   "//brave/components/tor/buildflags",
   "//brave/components/version_info",
-  "//brave/components/webcompat:core",
+  "//brave/components/webcompat/content/browser",
+  "//brave/components/webcompat/core/common",
   "//brave/services/network/public/cpp",
   "//brave/third_party/blink/renderer",
   "//chrome/browser:browser_process",
