--- a/components/brave_webtorrent/extension/manifest.json
+++ b/components/brave_webtorrent/extension/manifest.json
@@ -3,12 +3,17 @@
   "name": "Brave WebTorrent",
   "manifest_version": 2,
   "description": "WebTorrent extension",
-  "background": {
+  "background" : {
     "scripts": ["extension/out/brave_webtorrent_background.bundle.js"],
     "persistent": false
   },
-  "permissions": ["downloads", "dns", "tabs", "webNavigation"],
-  "host_permissions": ["*://*/*"],
+  "permissions": [
+    "downloads",
+    "dns",
+    "tabs",
+    "webNavigation",
+    "<all_urls>"      // without '<all_urls>' sometimes get CORS issues when fetching the torrent file
+  ],
   "sockets": {
     "udp": {
       "send": "*",
