--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build-storybook": "npm run build -- --target=brave:storybook && storybook build -c .storybook -o .storybook-out",
     "storybook": "storybook dev",
     "test-unit": "cross-env NODE_OPTIONS=--no-experimental-fetch jest -t",
-    "test-unit:wallet": "cross-env NODE_OPTIONS=--no-experimental-fetch jest --coverage=false components/brave_wallet_ui",
+    "test-unit:wallet": "cross-env NODE_OPTIONS=--no-experimental-fetch jest --moduleResolution=node --coverage=false components/brave_wallet_ui",
     "test-python-scripts": "npm run pep8 && PYTHONPATH=./script python -m unittest discover -s ./script/test",
     "update_symlink": "node ./build/commands/scripts/commands.js update_symlink",
     "build_fuzzer": "node ./build/commands/scripts/commands.js build_fuzzer",
@@ -93,7 +93,7 @@
     "@types/async": "3.2.20",
     "@types/chrome": "0.0.241",
     "@types/dom-navigation": "1.0.3",
-    "@types/jest": "27.5.2",
+    "@types/jest": "29.5.12",
     "@types/qr-image": "3.2.5",
     "@types/react": "18.2.75",
     "@types/react-dom": "18.2.24",
@@ -134,7 +134,8 @@
     "fs-extra": "8.1.0",
     "https-browserify": "1.0.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.5.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-junit": "13.0.0",
     "less": "3.13.1",
     "less-loader": "11.1.3",
@@ -162,10 +163,10 @@
     "teamcity-service-messages": "0.1.14",
     "terser": "5.16.2",
     "timers-browserify": "2.0.12",
-    "ts-jest": "27.1.4",
+    "ts-jest": "29.2.4",
     "ts-loader": "8.4.0",
     "typesafe-actions": "2.2.0",
-    "typescript": "4.9.4",
+    "typescript": "4.9.5",
     "typescript-plugin-css-modules": "5.1.0",
     "typescript-plugin-styled-components": "2.0.0",
     "url-loader": "4.1.1",
