--- a/browser/brave_wallet/BUILD.gn
+++ b/browser/brave_wallet/BUILD.gn
@@ -15,6 +15,8 @@ source_set("brave_wallet") {
     "blockchain_images_source.h",
     "brave_wallet_context_utils.cc",
     "brave_wallet_context_utils.h",
+    "brave_wallet_ipfs_service_factory.cc",
+    "brave_wallet_ipfs_service_factory.h",
     "brave_wallet_service_factory.cc",
     "brave_wallet_service_factory.h",
     "meld_integration_service_factory.cc",
