`SidePanelUI::GetSidePanelUIForBrowser` deleted
Access to the sidepanel pointer is supposed to be through the browser
instance now.

Chromium change:
https://chromium.googlesource.com/chromium/src/+/dda455db11b61d29a64ca80826eb1359d24b582a

commit dda455db11b61d29a64ca80826eb1359d24b582a
Author: Erik Chen <erikchen@chromium.org>
Date:   Tue Jun 11 21:53:21 2024 +0000

    Remove static accessors from SidePanelUI.

    This CL is a refactor with no intended behavior change.

    This CL turns SidePanelUI into an abstract base class. This CL modifies
    BrowserWindowFeatures to own an instance of SidePanelCoordinator.
    SidePanelUI static accessors are redirected to use
    BrowserWindowFeatures.

    There are slight timing differences to construction and destruction of
    SidePanelCoordinator, which should have no user-visible effect. This CL
    introduces the methods InitPostBrowserViewConstruction and
    TearDownPreBrowserViewDestruction to BrowserWindowFeatures to handle
    this more generically.

    Change-Id: Ic3565fa4ff8d6b57f301f51b2bb9d9d3ed8b2f09
    Bug: 346148554, 346158959, 345499793

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -1057,6 +1057,7 @@ test("brave_browser_tests") {
       "//brave/components/ai_chat/core/common/buildflags",
       "//brave/components/speedreader",
       "//brave/components/speedreader/common:mojom",
+      "//chrome/browser/ui/browser_window",
       "//components/language/core/browser:browser",
     ]
     if (enable_ai_chat) {
