--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -222,6 +222,12 @@ static_library("browser") {
     "wallet_data_files_installer.cc",
     "wallet_data_files_installer.h",
     "wallet_data_files_installer_delegate.h",
+    "zcash/create_transparent_transaction_task.cc",
+    "zcash/create_transparent_transaction_task.h",
+    "zcash/discover_next_unused_zcash_address_task.cc",
+    "zcash/discover_next_unused_zcash_address_task.h",
+    "zcash/get_transparent_utxos_context.cc",
+    "zcash/get_transparent_utxos_context.h",
     "zcash/zcash_block_tracker.cc",
     "zcash/zcash_block_tracker.h",
     "zcash/zcash_grpc_utils.cc",
@@ -240,8 +246,6 @@ static_library("browser") {
     "zcash/zcash_tx_state_manager.h",
     "zcash/zcash_wallet_service.cc",
     "zcash/zcash_wallet_service.h",
-    "zcash/zcash_wallet_service_tasks.cc",
-    "zcash/zcash_wallet_service_tasks.h",
   ]
   deps = [
     ":constants",
@@ -298,7 +302,11 @@ static_library("browser") {
   public_deps = [ "//brave/components/api_request_helper" ]
 
   if (enable_orchard) {
-    deps += [ "//brave/components/brave_wallet/browser/zcash/rust:rust_lib" ]
+    sources += [
+      "zcash/create_shield_all_transaction_task.cc",
+      "zcash/create_shield_all_transaction_task.h",
+    ]
+    deps += [ "internal:orchard_bundle" ]
   }
 
   configs += [ ":sardine_config" ]
