--- a/components/brave_news/browser/BUILD.gn
+++ b/components/brave_news/browser/BUILD.gn
@@ -8,8 +8,12 @@ import("//build/config/features.gni")
 
 static_library("browser") {
   sources = [
+    "background_history_query.cc",
+    "background_history_query.h",
     "brave_news_controller.cc",
     "brave_news_controller.h",
+    "brave_news_engine.cc",
+    "brave_news_engine.h",
     "brave_news_p3a.cc",
     "brave_news_p3a.h",
     "brave_news_pref_manager.cc",
