--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -264,6 +264,7 @@ test("brave_unit_tests") {
     "//brave/components/url_sanitizer/browser:unittests",
     "//brave/components/variations:unit_tests",
     "//brave/components/version_info:unit_tests",
+    "//brave/components/web_discovery/browser:unit_tests",
     "//brave/extensions:common",
     "//brave/mojo/brave_ast_patcher:unit_tests",
     "//brave/net:unit_tests",
@@ -921,6 +922,7 @@ test("brave_browser_tests") {
     "//brave/components/speedreader/common/buildflags",
     "//brave/components/tor/buildflags",
     "//brave/components/url_sanitizer/browser",
+    "//brave/components/web_discovery/browser:browser_tests",
     "//brave/components/webcompat/content/browser",
     "//brave/components/webcompat/core/common",
     "//brave/renderer/skus:browser_tests",
