--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -266,6 +266,7 @@ test("brave_unit_tests") {
     "//brave/components/tor/buildflags",
     "//brave/components/url_sanitizer/browser:unittests",
     "//brave/components/version_info:unit_tests",
+    "//brave/components/web_discovery/browser:unit_tests",
     "//brave/extensions:common",
     "//brave/mojo/brave_ast_patcher:unit_tests",
     "//brave/net:unit_tests",
@@ -923,6 +924,7 @@ test("brave_browser_tests") {
     "//brave/components/speedreader/common/buildflags",
     "//brave/components/tor/buildflags",
     "//brave/components/url_sanitizer/browser",
+    "//brave/components/web_discovery/browser:browser_tests",
     "//brave/components/webcompat:core",
     "//brave/renderer/skus:browser_tests",
     "//brave/renderer/test:browser_tests",
