Add Web Discovery Android pref, add buildflag and feature guards

--- a/browser/web_discovery/BUILD.gn
+++ b/browser/web_discovery/BUILD.gn
@@ -3,22 +3,27 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
+import("//brave/components/web_discovery/common/buildflags/buildflags.gni")
 import("//extensions/buildflags/buildflags.gni")
 
-source_set("web_discovery") {
-  sources = [
-    "wdp_service_factory.cc",
-    "wdp_service_factory.h",
-  ]
-  deps = [
-    "//base",
-    "//brave/components/web_discovery/browser",
-    "//chrome/browser:browser_process",
-    "//chrome/common:constants",
-    "//components/keyed_service/content",
-    "//components/user_prefs",
-    "//content/public/browser",
-  ]
+if (enable_web_discovery_native) {
+  source_set("web_discovery") {
+    sources = [
+      "wdp_service_factory.cc",
+      "wdp_service_factory.h",
+    ]
+    deps = [
+      "//base",
+      "//brave/components/web_discovery/browser",
+      "//brave/components/web_discovery/common",
+      "//chrome/browser:browser_process",
+      "//chrome/common:constants",
+      "//components/keyed_service/content",
+      "//components/user_prefs",
+      "//content/public/browser",
+      "//third_party/re2",
+    ]
+  }
 }
 
 source_set("unit_tests") {
