--- a/renderer/sources.gni
+++ b/renderer/sources.gni
@@ -9,6 +9,7 @@ import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
 import("//brave/components/playlist/common/buildflags/buildflags.gni")
 import("//brave/components/speedreader/common/buildflags/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
+import("//brave/components/web_discovery/common/buildflags/buildflags.gni")
 import("//third_party/widevine/cdm/widevine.gni")
 
 brave_chrome_renderer_sources = [
@@ -36,7 +37,6 @@ brave_chrome_renderer_deps = [
   "//brave/components/skus/renderer",
   "//brave/components/speedreader/common/buildflags",
   "//brave/components/tor/buildflags",
-  "//brave/components/web_discovery/renderer",
   "//brave/renderer/brave_wallet",
   "//mojo/public/cpp/bindings",
   "//third_party/blink/public:blink",
@@ -58,6 +58,13 @@ if (enable_ai_chat) {
   brave_chrome_renderer_deps += [
     "//brave/components/ai_chat/core/common:common",
     "//brave/components/ai_chat/renderer",
+  ]
+}
+
+if (enable_web_discovery_native) {
+  brave_chrome_renderer_deps += [
+    "//brave/components/web_discovery/common",
+    "//brave/components/web_discovery/renderer",
   ]
 }
 
