--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -17,6 +17,7 @@ import("//brave/components/playlist/common/buildflags/buildflags.gni")
 import("//brave/components/request_otr/common/buildflags/buildflags.gni")
 import("//brave/components/speedreader/common/buildflags/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
+import("//brave/components/web_discovery/common/buildflags/buildflags.gni")
 import("//brave/test/testing.gni")
 import("//brave/updater/config.gni")
 import("//chrome/common/features.gni")
@@ -264,7 +265,6 @@ test("brave_unit_tests") {
     "//brave/components/url_sanitizer/browser:unittests",
     "//brave/components/variations:unit_tests",
     "//brave/components/version_info:unit_tests",
-    "//brave/components/web_discovery/browser:unit_tests",
     "//brave/extensions:common",
     "//brave/mojo/brave_ast_patcher:unit_tests",
     "//brave/net:unit_tests",
@@ -369,6 +369,10 @@ test("brave_unit_tests") {
       "//brave/components/ai_chat/core/common:unit_tests",
       "//brave/components/ai_chat/renderer:unit_tests",
     ]
+  }
+
+  if (enable_web_discovery_native) {
+    deps += [ "//brave/components/web_discovery/browser:unit_tests" ]
   }
 
   data = [ "data/" ]
@@ -1041,6 +1045,10 @@ test("brave_browser_tests") {
       "//brave/components/greaselion/browser",
       "//chrome/browser",
     ]
+  }
+
+  if (enable_web_discovery_native) {
+    deps += [ "//brave/components/web_discovery/browser:browser_tests" ]
   }
 
   if (ethereum_remote_client_enabled) {
