--- a/components/web_discovery/common/BUILD.gn
+++ b/components/web_discovery/common/BUILD.gn
@@ -3,9 +3,24 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import("//brave/components/web_discovery/common/buildflags/buildflags.gni")
 import("//mojo/public/tools/bindings/mojom.gni")
 
-mojom("mojom") {
-  sources = [ "web_discovery.mojom" ]
-  deps = [ "//mojo/public/mojom/base" ]
+if (enable_web_discovery_native) {
+  mojom("mojom") {
+    sources = [ "web_discovery.mojom" ]
+    deps = [ "//mojo/public/mojom/base" ]
+  }
+}
+
+static_library("common") {
+  sources = [
+    "features.cc",
+    "features.h",
+  ]
+
+  deps = [
+    "//base",
+    "//brave/components/web_discovery/common/buildflags",
+  ]
 }
