Add separate pref for Web Discovery native

--- a/components/web_discovery/browser/BUILD.gn
+++ b/components/web_discovery/browser/BUILD.gn
@@ -58,6 +58,7 @@ static_library("browser") {
     "//components/prefs",
     "//content/public/browser",
     "//crypto",
+    "//extensions/buildflags",
     "//net",
     "//services/network/public/cpp",
     "//third_party/boringssl",
