--- a/browser/resources/settings/BUILD.gn
+++ b/browser/resources/settings/BUILD.gn
@@ -8,6 +8,7 @@ import("//brave/build/config.gni")
 import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
 import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
+import("//brave/components/web_discovery/common/buildflags/buildflags.gni")
 import("//brave/resources/brave_grit.gni")
 import("//chrome/common/features.gni")
 import("//extensions/buildflags/buildflags.gni")
@@ -75,6 +76,7 @@ preprocess_if_expr("preprocess") {
     "enable_brave_vpn_wireguard=$enable_brave_vpn_wireguard",
     "enable_extensions=$enable_extensions",
     "enable_pin_shortcut=$enable_pin_shortcut",
+    "enable_web_discovery_native=$enable_web_discovery_native",
   ]
   out_folder =
       "$root_gen_dir/chrome/browser/resources/settings/$preprocess_folder"
