--- a/browser/android/preferences/BUILD.gn
+++ b/browser/android/preferences/BUILD.gn
@@ -51,6 +51,7 @@ java_cpp_strings("java_pref_names_srcjar") {
     "//brave/components/p3a/pref_names.h",
     "//brave/components/request_otr/common/pref_names.h",
     "//brave/components/speedreader/speedreader_pref_names.h",
+    "//brave/components/web_discovery/browser/pref_names.h",
     "//components/translate/core/browser/translate_pref_names.h",
   ]
 
