Update Web Discovery CTA to set correct pref

--- a/components/web_discovery/browser/BUILD.gn
+++ b/components/web_discovery/browser/BUILD.gn
@@ -53,6 +53,7 @@ static_library("browser") {
     "//base",
     "//brave/brave_domains",
     "//brave/components/constants",
+    "//brave/components/web_discovery/common",
     "//brave/components/web_discovery/common:mojom",
     "//components/keyed_service/core",
     "//components/prefs",
@@ -100,6 +101,7 @@ source_set("browser_tests") {
     ":browser",
     "//base/test:test_support",
     "//brave/components/constants",
+    "//brave/components/web_discovery/common",
     "//brave/components/web_discovery/common:mojom",
     "//content/test:test_support",
     "//net:test_support",
