--- a/components/ipfs/BUILD.gn
+++ b/components/ipfs/BUILD.gn
@@ -3,6 +3,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import("//third_party/widevine/cdm/widevine.gni")
+
 static_library("ipfs") {
   sources = [
     "ipfs_prefs.cc",
@@ -17,6 +19,7 @@ static_library("ipfs") {
     "//components/base32",
     "//components/prefs:prefs",
     "//net",
+    "//third_party/widevine/cdm:buildflags",
     "//url",
   ]
 }
