--- a/components/ipfs/BUILD.gn
+++ b/components/ipfs/BUILD.gn
@@ -32,6 +32,8 @@ source_set("brave_ipfs_unit_tests") {
   deps = [
     "//base/test:test_support",
     "//brave/components/ipfs",
+    "//chrome/common:constants",
+    "//content/test:test_support",
     "//net:net",
   ]
 }
