(Wallet) Implement confirmation screen when finishing onboarding (#24424)
Implement new confirmation screen at the end of onboarding flow when creating or restoring a Wallet.

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -147,6 +147,7 @@ brave_java_resources = [
   "java/res/drawable-night/restore_wallet.xml",
   "java/res/drawable-night/tablet_recent_tab_empty_state_illustration.xml",
   "java/res/drawable-night/tipping_background_success.xml",
+  "java/res/drawable-night/wallet_portfolio.xml",
   "java/res/drawable-nodpi/dylan_malval_sea_min.webp",
   "java/res/drawable-nodpi/eth.png",
   "java/res/drawable-nodpi/ic_quick_action_search_and_bookmark_widget_preview.png",
@@ -746,6 +747,7 @@ brave_java_resources = [
   "java/res/drawable/vpn_plan_bg.xml",
   "java/res/drawable/vpn_plan_selected_bg.xml",
   "java/res/drawable/wallet_hollow_button_background.xml",
+  "java/res/drawable/wallet_portfolio.xml",
   "java/res/drawable/wallet_sign_msg_err_bg.xml",
   "java/res/drawable/wallet_toolbar_panel_gradient_bg.xml",
   "java/res/drawable/wallet_top_banner_bg.xml",
@@ -875,6 +877,7 @@ brave_java_resources = [
   "java/res/layout/fragment_brave_vpn_always_on_error_dialog.xml",
   "java/res/layout/fragment_brave_vpn_confirm_dialog.xml",
   "java/res/layout/fragment_brave_vpn_plan.xml",
+  "java/res/layout/fragment_confirmation_wallet.xml",
   "java/res/layout/fragment_connect_account.xml",
   "java/res/layout/fragment_content_filtering.xml",
   "java/res/layout/fragment_create_account.xml",
