--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -429,6 +429,9 @@ source_set("ui") {
 
   if (toolkit_views) {
     sources += [
+      "side_panel/brave_contextual_side_panel_tab_helper.cc",
+      "side_panel/brave_contextual_side_panel_tab_helper.h",
+      "side_panel/brave_side_panel_utils.h",
       "views/bookmarks/bookmark_bar_instructions_view.cc",
       "views/bookmarks/bookmark_bar_instructions_view.h",
       "views/bookmarks/brave_bookmark_bar_view.cc",
