--- a/components/omnibox/browser/BUILD.gn
+++ b/components/omnibox/browser/BUILD.gn
@@ -31,8 +31,6 @@ source_set("unit_tests") {
     "//brave/components/constants",
     "//brave/components/l10n/common:test_support",
     "//brave/components/search_engines",
-    "//chrome/browser/search_engines",
-    "//chrome/test:test_support",
     "//components/bookmarks/browser",
     "//components/bookmarks/test",
     "//components/omnibox/browser",
@@ -42,11 +40,18 @@ source_set("unit_tests") {
     "//components/search_engines",
     "//components/sync_preferences:test_support",
     "//components/variations:test_support",
-    "//content/test:test_support",
     "//services/network:test_support",
     "//testing/gmock",
     "//testing/gtest",
   ]
+
+  if (!is_ios) {
+    deps += [
+      "//chrome/browser/search_engines",
+      "//chrome/test:test_support",
+      "//content/test:test_support",
+    ]
+  }
 
   if (enable_commander) {
     sources +=
