--- a/browser/ui/android/omnibox/BUILD.gn
+++ b/browser/ui/android/omnibox/BUILD.gn
@@ -24,6 +24,7 @@ android_library("java") {
     "java/src/org/chromium/chrome/browser/omnibox/suggestions/brave_search/BraveSearchBannerProperties.java",
     "java/src/org/chromium/chrome/browser/omnibox/suggestions/brave_search/BraveSearchBannerViewBinder.java",
     "java/src/org/chromium/chrome/browser/omnibox/suggestions/editurl/BraveEditUrlSuggestionProcessor.java",
+    "java/src/org/chromium/chrome/browser/omnibox/suggestions/editurl/BraveEditUrlSuggestionProcessorBase.java",
   ]
 
   deps = [
