--- a/components/web_discovery/browser/anonymous_credentials/rs/cxx/Cargo.toml
+++ b/components/web_discovery/browser/anonymous_credentials/rs/cxx/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MPL-2.0"
 
 [dependencies]
-anonymous-credentials = "0.1"
+anonymous-credentials = { version = "0.1", path = "../lib" }
 cxx = "1"
 
 [lib]
