Fixed wrong infobar background color
fix https://github.com/brave/brave-browser/issues/39580

Upstream doesn't use toolbar color for it anymore since cr127.
But, we want to have same bg color with toolbar.

--- a/browser/ui/color/BUILD.gn
+++ b/browser/ui/color/BUILD.gn
@@ -18,3 +18,16 @@ source_set("leo_colors") {
     "//ui/gfx",
   ]
 }
+
+source_set("unit_tests") {
+  testonly = true
+
+  sources = [ "brave_color_mixers_unittest.cc" ]
+
+  deps = [
+    "//chrome/browser/ui/color:color_headers",
+    "//chrome/browser/ui/color:mixers",
+    "//testing/gtest",
+    "//ui/color",
+  ]
+}
