--- a/components/brave_wallet/browser/internal/BUILD.gn
+++ b/components/brave_wallet/browser/internal/BUILD.gn
@@ -38,10 +38,12 @@ source_set("hd_key") {
   }
 }
 
-source_set("orchard_bundle") {
-  sources = [
-    "orchard_bundle_manager.cc",
-    "orchard_bundle_manager.h",
-  ]
-  deps = [ "//brave/components/brave_wallet/browser/zcash/rust" ]
+if (enable_orchard) {
+  source_set("orchard_bundle") {
+    sources = [
+      "orchard_bundle_manager.cc",
+      "orchard_bundle_manager.h",
+    ]
+    deps = [ "//brave/components/brave_wallet/browser/zcash/rust" ]
+  }
 }
