--- a/components/brave_wallet/common/config.gni
+++ b/components/brave_wallet/common/config.gni
@@ -11,5 +11,6 @@ declare_args() {
   enable_zcash_by_default = !is_ios && !is_android
 
   # Flag is used to allow future size difference calculation
-  enable_orchard = true
+  # iOS temporary disabled due build errors
+  enable_orchard = !is_ios
 }
