--- a/components/brave_ads/core/test/BUILD.gn
+++ b/components/brave_ads/core/test/BUILD.gn
@@ -611,9 +611,25 @@ source_set("brave_ads_unit_tests") {
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversion/conversion_builder_unittest.cc",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversion/conversion_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_feature_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_inline_content_ad_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_inline_content_ad_util_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_new_tab_page_ad_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_new_tab_page_ad_util_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_notification_ad_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_notification_ad_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_observer_mock.cc",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_observer_mock.h",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_promoted_content_ad_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_promoted_content_ad_util_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_search_result_ad_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_search_result_ad_util_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_test_constants.h",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_test_util.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_test_util.h",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_unittest.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_unittest_base.cc",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_unittest_base.h",
+    "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_util_internal_unittest.cc",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/conversions_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/resource/conversion_resource_unittest.cc",
     "//brave/components/brave_ads/core/internal/user_engagement/conversions/types/default_conversion/creative_set_conversion_url_pattern/creative_set_conversion_url_pattern_util_unittest.cc",
