--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -409,6 +409,7 @@ leo_icons = [
   "slash.svg",
   "yahoo-color.svg",
   "yandex-color.svg",
+  "window-tabs-vertical-expanded.svg",
 ]
 
 if (enable_brave_vpn_panel) {
