--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -283,6 +283,7 @@ static_library("browser") {
     "//brave/third_party/argon2",
     "//components/component_updater",
     "//components/content_settings/core/browser",
+    "//components/country_codes:country_codes",
     "//components/keyed_service/core",
     "//components/prefs",
     "//components/sync_preferences",
